@@ -284,17 +284,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|TestDistributedSearch
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|client
 operator|.
 name|solrj
@@ -498,15 +487,6 @@ operator|.
 name|junit
 operator|.
 name|BeforeClass
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|Ignore
 import|;
 end_import
 begin_comment
@@ -5362,6 +5342,8 @@ argument_list|,
 name|dst
 argument_list|,
 literal|null
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -5380,6 +5362,9 @@ name|dst
 parameter_list|,
 name|Integer
 name|port
+parameter_list|,
+name|boolean
+name|internalCompression
 parameter_list|)
 throws|throws
 name|IOException
@@ -5458,6 +5443,21 @@ name|port
 operator|.
 name|toString
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|line
+operator|=
+name|line
+operator|.
+name|replace
+argument_list|(
+literal|"COMPRESSION"
+argument_list|,
+name|internalCompression
+condition|?
+literal|"internal"
+else|:
+literal|"false"
 argument_list|)
 expr_stmt|;
 name|out
@@ -5779,6 +5779,12 @@ name|destFile
 argument_list|)
 argument_list|,
 name|testPort
+argument_list|,
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
